2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: don't try to compile the ember script, doh!
	* ember.spec.in: bump wf lib required

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/carpenter/*, src/components/ogre/modeldefinitions/*, src/components/ogre/jesus/*
		* general media additions

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/buildings.material: add more material and change some other

2005-05-10  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/malebuilder.material: removed syntax error

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: copy the ember script file to the bin dir

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.*
		* allow command line switches, mostly used for defining whether ogre plugins should be loaded through binreloc or ~/.ember/plugins.cfg. Code shamelessly taken from Sear, thanks to all Sear developers.

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/widgets/Makefile.am:
		* oops, don't include TerrainEdit just yet. Thanks Kai and James.

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: bump required Atlas to 0.5.9, Eris to 1.3.5 and Mercator to 0.2.2

2005-05-09  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntity.*, src/components/ogre/EmberPhysicalEntity.*, src/components/ogre/WorldEmberEntity.*
		* changed the way entities decide their height. The nodehierarcy is now walked until an entity which knows how to decide the height (for example the terrain) is found. This means no more flying pigs.

2005-05-08  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.*, src/components/ogre/TerrainPage.*, src/components/ogre/TerrainShader.*:
		* make it work with Mercator 0.2.2